# VirtualMoments

./: .gitignore  README.md  index.html  manifest.yaml  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  main.yml  periodic_deploy.yml  test_python.yml
VirtualMoments/: AstroBuilder.py  ScreenshotScrapper.py  __init__.py  __main__.py
_astro/: album_template.CEvCqwWH.css  album_template.CSE6mrAn.css  index.Dz2DtXZq.css
album1/: index.html
album_template/: index.html
art_of_rally/: index.html
cyberpunk/: index.html
forza_horizon_5/: index.html
index_template/: index.html
motorsports/: index.html
no_mans_sky/: index.html
other/: index.html
script/: build_astro.py  content.py  get_content.py  prepare_manifest.py  utils.py
scripts/: build_astro.py  get_content.py  utils.py
tests/pytest/: test_build_astro.py  test_get_content.py  test_utils.py
the_witcher_3_wild_hunt/: index.html
web/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
web/src/components/: Album.astro  AlbumCover.astro  Footer.astro  Header.astro  Icon.astro  Screenshot.astro
web/src/layouts/: Album.astro  IndexPage.astro  Layout.astro
web/src/pages/: album1.astro  album_template.astro  index.astro  index_template.astro
web/src/styles/: global.css
